{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 1537,
  "lineage": "309ea057-41bb-e985-640c-0c621676fb5b",
  "resources": [
    {
      "module": "module.ansible",
      "mode": "managed",
      "type": "aws_instance",
      "name": "li-ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2eac25772cd4e36",
            "arn": "arn:aws:ec2:ap-southeast-1:104866962497:instance/i-02a5c4ffd7a667460",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a5c4ffd7a667460",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Tan-TF-Linux-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b97ac899035b5201",
            "private_dns": "ip-172-16-1-75.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.75",
            "public_ip": "54.254.229.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0923de22b3223ade6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08851e7346b39ea0f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077f58733a4d50cb6",
            "tags": {
              "Name": "linux-ansible"
            },
            "tags_all": {
              "Name": "linux-ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08851e7346b39ea0f"
            ]
          },
          "dependencies": [
            "module.ansible.aws_security_group.secu-group-ansible",
            "module.key.tls_private_key.tan-private-linux",
            "module.newrelic.aws_instance.li",
            "module.newrelic.aws_instance.win",
            "module.newrelic.aws_security_group.secu-group-test2",
            "module.newrelic.data.aws_ssm_parameter.password",
            "module.newrelic.data.aws_ssm_parameter.username",
            "module.newrelic.data.aws_ssm_parameter.win-pass",
            "module.newrelic.data.template_file.windows-userdata",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ansible",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secu-group-ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:104866962497:security-group/sg-08851e7346b39ea0f",
            "description": "Ansible Linux secu group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08851e7346b39ea0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Ansible Linux",
            "name_prefix": "",
            "owner_id": "104866962497",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ansible"
            },
            "tags_all": {
              "Name": "Ansible"
            },
            "timeouts": null,
            "vpc_id": "vpc-0baf4526a06996a1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.newrelic",
      "mode": "managed",
      "type": "aws_instance",
      "name": "li",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2eac25772cd4e36",
            "arn": "arn:aws:ec2:ap-southeast-1:104866962497:instance/i-030ad0a4343a1b2c0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030ad0a4343a1b2c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Tan-TF-Linux-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-026032004462f3e66",
            "private_dns": "ip-172-16-1-239.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.239",
            "public_ip": "54.179.35.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04db699cd4a684a77",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0caf68144c05685b1"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-077f58733a4d50cb6",
            "tags": {
              "Name": "linux-newrelic"
            },
            "tags_all": {
              "Name": "linux-newrelic"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0caf68144c05685b1"
            ]
          },
          "dependencies": [
            "module.key.tls_private_key.tan-private-linux",
            "module.newrelic.aws_security_group.secu-group-test2",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.newrelic",
      "mode": "managed",
      "type": "aws_instance",
      "name": "win",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bc64185df5784cc3",
            "arn": "arn:aws:ec2:ap-southeast-1:104866962497:instance/i-0c06ead72d5aa215b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:104866962497:key/ad336a8e-276e-46c5-9395-663b0b231bff",
                "throughput": 0,
                "volume_id": "vol-05387764fa1601ffc",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-0c06ead72d5aa215b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Tan-TF-Windows-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "K0rA5vs1YSrZaMxNGrwMgfjrDI5FTaNDfaF7cuHPSIKWRpSB5j7Eg2MouYQdJReG1UonIQZhp6yM8LwADhPk+8cBE91+8hp4NPilFFSts1ygSkxOQMwFTT2QEsCQ7r9lopo6JQX6dx33DOmbC8jUjw4fKLrJ8TpW3nVHZz2ZGw1Qcqv2OcG1HM+8lzggvIwpiIUwNveFq+RX9i/viQAs0f2VNEHPrtzMtr9llmrGAddXLo2ZYMgR09q0HmfjEHsYfnwc4Cd5qociqvV6e6e2IgadrILjlUiEue9/ArlCkEiUreWjkBzv7dA2LRSpEu99gznDnPVuhCOo+PPnW3xdcg==",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d7488575f5b3c176",
            "private_dns": "ip-172-16-1-118.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.118",
            "public_ip": "54.169.255.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:104866962497:key/ad336a8e-276e-46c5-9395-663b0b231bff",
                "throughput": 0,
                "volume_id": "vol-0b70691920b2e5e1b",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-077f58733a4d50cb6",
            "tags": {
              "Name": "windows-newrelic"
            },
            "tags_all": {
              "Name": "windows-newrelic"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0caf68144c05685b1"
            ]
          },
          "dependencies": [
            "module.newrelic.aws_security_group.secu-group-test2",
            "module.newrelic.data.template_file.windows-userdata",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.newrelic",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secu-group-test2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:104866962497:security-group/sg-0caf68144c05685b1",
            "description": "New Relic secu group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0caf68144c05685b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 5985,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5985
              }
            ],
            "name": "New Relic",
            "name_prefix": "",
            "owner_id": "104866962497",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "New Relic"
            },
            "tags_all": {
              "Name": "New Relic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0baf4526a06996a1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "TF-default-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:104866962497:route-table/rtb-0c1598d90bb84e902",
            "default_route_table_id": "rtb-0c1598d90bb84e902",
            "id": "rtb-0c1598d90bb84e902",
            "owner_id": "104866962497",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a229e6eecd3684bc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0baf4526a06996a1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.another_gw",
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "another_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:104866962497:internet-gateway/igw-0a229e6eecd3684bc",
            "id": "igw-0a229e6eecd3684bc",
            "owner_id": "104866962497",
            "tags": {
              "Name": "Another Gateway"
            },
            "tags_all": {
              "Name": "Another Gateway"
            },
            "vpc_id": "vpc-0baf4526a06996a1d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:104866962497:subnet/subnet-077f58733a4d50cb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077f58733a4d50cb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104866962497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_network_interface"
            },
            "tags_all": {
              "Name": "private_network_interface"
            },
            "vpc_id": "vpc-0baf4526a06996a1d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:104866962497:subnet/subnet-0d866c563046664bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d866c563046664bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "104866962497",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_network_interface"
            },
            "tags_all": {
              "Name": "public_network_interface"
            },
            "vpc_id": "vpc-0baf4526a06996a1d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.another_gw",
            "module.vpc.aws_vpc.private_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "private_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:104866962497:vpc/vpc-0baf4526a06996a1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-02cf9d7cd9a4f2ed7",
            "default_route_table_id": "rtb-0c1598d90bb84e902",
            "default_security_group_id": "sg-0be8125f2e8d4c2a2",
            "dhcp_options_id": "dopt-0fcf1808e855319d0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0baf4526a06996a1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1598d90bb84e902",
            "owner_id": "104866962497",
            "tags": {
              "Name": "Tan_Private_VPC"
            },
            "tags_all": {
              "Name": "Tan_Private_VPC"
            }
          }
        }
      ]
    }
  ]
}